Fixing bug 197855 JRE 1.3.1 crashes because we don't resolve symbolic links to plugin before loading it on UNIX and bug 197975, plugin.expose_full_path broke, r=dougt, sr=heikki